tdf#119451 vcl layout cache: fix glyph fallback handling

Type ":dog:" into Writer with e.g. the Liberation Serif font, glyph
layout doesn't execute, a literal 0 glyph id is rendered.

Fix the problem by returning the glyph items (to be inserted into a
cache) after handling glyph fallback.

Change-Id: I928b0087de309dbe04936c6e7732d79bec541596